[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/main/grid.tscn" type="PackedScene" id=1]
[ext_resource path="res://scripts/main/Player1Grid.gd" type="Script" id=2]
[ext_resource path="res://art/extra/warning_lbl.png" type="Texture" id=3]
[ext_resource path="res://font/CarterOne.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://art/extra/counter_lbl.png" type="Texture" id=5]

[sub_resource type="DynamicFont" id=1]
size = 65
font_data = ExtResource( 4 )

[node name="Player1Grid" instance=ExtResource( 1 )]
script = ExtResource( 2 )
x_start = 30
y_start = 650

[node name="NextPair" parent="." index="1"]
position = Vector2( 61.3781, 179.281 )
scale = Vector2( 0.8, 0.8 )

[node name="lblcounterGem" parent="." index="2"]
margin_left = 406.0
margin_top = 35.0
margin_right = 456.0
margin_bottom = 90.0
text = "00"

[node name="Warning" type="Sprite" parent="." index="5"]
self_modulate = Color( 1, 1, 1, 0.513726 )
scale = Vector2( 0.44, 0.44 )
texture = ExtResource( 3 )
offset = Vector2( 192, -64 )
__meta__ = {
"_edit_group_": true
}

[node name="lbl_warning" type="Label" parent="Warning" index="0"]
anchor_right = 1.0
margin_top = -108.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.882353, 0.74902, 0.231373, 1 )
align = 1

[node name="GemCount" type="Sprite" parent="." index="6"]
self_modulate = Color( 1, 1, 1, 0.513726 )
position = Vector2( 226.5, 0 )
scale = Vector2( 0.44, 0.44 )
texture = ExtResource( 5 )
offset = Vector2( 128, -64 )
__meta__ = {
"_edit_group_": true
}

[node name="lbl_counter_count" type="Label" parent="GemCount" index="0"]
anchor_right = 1.0
margin_top = -108.0
margin_bottom = -14.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.882353, 0.74902, 0.231373, 1 )
align = 1

